[package]
name = "interavl"
description = "An optimised interval tree for efficient interval stabbing"
authors = ["Dom Dwyer <dom@itsallbroken.com>"]
version = "0.1.0"
edition = "2021"

license = "Apache-2.0"
documentation = "https://docs.rs/interavl"
repository = "https://github.com/domodwyer/interavl"
keywords = ["interval", "tree", "stabbing", "range", "query"]
categories = ["data-structures", "algorithms", "date-and-time"]

[dependencies]

[dev-dependencies]
criterion = "0.5.1"
paste = "1.0.15"
proptest = "1.3.1"

[lib]
bench = false

[[bench]]
name = "bench"
harness = false
